Actualización de  descripción del perfil
- Incluir formación completa: Finanzas + DAM + Data Science
- Destacar combinación de visión de negocio y skills técnicos
- Actualizado en los 3 idiomas (ES/EN/DE)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -13,8 +13,8 @@
   "home": {
     "description": {
       "paragraph1": "Nach mehreren Jahren als Berufskoch in Deutschland und Spanien habe ich beschlossen, meine Laufbahn in Richtung *Programmierung und Datenanalyse* umzuleiten. Meine Kocherfahrung hat mich gelehrt, unter Druck zu arbeiten, *Organisation und Präzision in anspruchsvollen Umgebungen* aufrechtzuerhalten und *effektiv im Team zu arbeiten*.",
-      "paragraph2": "Derzeit studiere ich einen Master in *Data Science & KI*, nachdem ich mich zuvor autodidaktisch vorbereitet habe, um mit einer soliden Grundlage anzukommen. Ich entwickle Projekte mit *Python*, *SQL*, *Machine Learning* und *Power BI*. Es begeistert mich, Muster in Daten zu entdecken und komplexe Probleme zu lösen.",
-      "paragraph3": "Obwohl ich in diesem Bereich anfange, bringe ich *Engagement, Lernbereitschaft* und eine einzigartige Perspektive mit, die mich antreibt, als *Data Scientist und Data Analyst* zu wachsen."
+      "paragraph2": "Mit einer Ausbildung in *Betriebswirtschaft & Finanzen* und *Multiplattform-Anwendungsentwicklung* kombiniere ich Kenntnisse in *Finanzanalyse* mit Erfahrung in *Java*, *C#* und *Datenbanken*. Derzeit vertiefe ich diese Kenntnisse durch einen Master in *Data Science & KI*. Ich entwickle Projekte mit *Python*, *SQL*, *Machine Learning* und *Power BI*. Es begeistert mich, Muster in Daten zu entdecken und komplexe Probleme zu lösen.",
+      "paragraph3": "Meine solide Grundlage in *Programmierung und Finanzanalyse*, kombiniert mit praktischer Softwareentwicklungserfahrung, ermöglicht es mir, eine ganzheitliche Perspektive einzubringen, die *technische Fähigkeiten* und *Geschäftssinn* vereint, um als *Data Scientist und Data Analyst* zu wachsen."
     },
     "skillsCategories": {
       "personal": "Persönliche Fähigkeiten",
