--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,8 +13,8 @@
   "home": {
     "description": {
       "paragraph1": "After several years as a professional chef in Germany and Spain, I decided to redirect my career towards *programming and data analysis*. My culinary experience taught me to work under pressure, maintain *organization and precision in demanding environments*, and *collaborate effectively in teams*.",
-      "paragraph2": "I am currently pursuing a master's degree in *Data Science & AI*, after preparing myself autodidactically to arrive with a solid foundation. I develop projects with *Python*, *SQL*, *Machine Learning* and *Power BI*. I am passionate about discovering patterns in data and solving complex problems.",
-      "paragraph3": "Although I am starting in this field, I bring *dedication, eagerness to learn* and a unique perspective that drives me to grow as a *Data Scientist and Data Analyst*."
+      "paragraph2": "With education in *Business Administration & Finance* and *Multiplatform Application Development*, I combine knowledge in *financial analysis* with experience in *Java*, *C#*, and *databases*. I am currently deepening this knowledge by pursuing a master's degree in *Data Science & AI*. I develop projects with *Python*, *SQL*, *Machine Learning* and *Power BI*. I am passionate about discovering patterns in data and solving complex problems.",
+      "paragraph3": "My solid foundation in *programming and financial analysis*, combined with practical software development experience, allows me to contribute an integral perspective that combines *technical skills* and *business insight* to grow as a *Data Scientist and Data Analyst*."
     },
     "skillsCategories": {
       "personal": "Personal Skills",
