--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -13,8 +13,8 @@
   "home": {
     "description": {
       "paragraph1": "Después de varios años como cocinero profesional en Alemania y España, he decidido reorientar mi carrera hacia la *programación y el análisis de datos*. Mi experiencia en cocina me ha enseñado a trabajar bajo presión, mantener la *organización y precisión en entornos exigentes*, y *colaborar efectivamente en equipo*.",
-      "paragraph2": "Actualmente curso un máster en *Data Science & IA*, tras haberme preparado previamente de forma autodidacta para llegar con una base sólida. Desarrollo proyectos con *Python*, *SQL*, *Machine Learning* y *Power BI*. Me apasiona descubrir patrones en los datos y resolver problemas complejos.",
-      "paragraph3": "Aunque estoy empezando en este campo, aporto *dedicación, ganas de aprender* y una perspectiva única que me impulsa a crecer como *Data Scientist y Data Analyst*."
+      "paragraph2": "Con formación en *Administración y Finanzas* y *Desarrollo de Aplicaciones Multiplataforma (DAM)*, combino conocimientos en *análisis financiero* con experiencia en *Java*, *C#* y *bases de datos*. Actualmente profundizo estos conocimientos cursando un máster en *Data Science & IA*. Desarrollo proyectos con *Python*, *SQL*, *Machine Learning* y *Power BI*. Me apasiona descubrir patrones en los datos y resolver problemas complejos.",
+      "paragraph3": "Mi sólida base en *programación y análisis financiero*, combinada con experiencia práctica en desarrollo de software, me permite aportar una perspectiva integral que combina *competencias técnicas* y *visión de negocio* para crecer como *Data Scientist y Data Analyst*."
     },
     "skillsCategories": {
       "personal": "Aptitudes Personales",
