--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -12,9 +12,9 @@
   },
   "home": {
     "description": {
-      "paragraph1": "Nach mehreren Jahren als Berufskoch in Deutschland und Spanien habe ich beschlossen, meine Laufbahn in Richtung *Programmierung und Datenanalyse* umzuleiten. Meine Kocherfahrung hat mich gelehrt, unter Druck zu arbeiten, *Organisation und Präzision in anspruchsvollen Umgebungen* aufrechtzuerhalten und *effektiv im Team zu arbeiten*.",
-      "paragraph2": "Mit einer Ausbildung in *Betriebswirtschaft & Finanzen* und *Multiplattform-Anwendungsentwicklung* kombiniere ich Kenntnisse in *Finanzanalyse* mit Erfahrung in *Java*, *C#* und *Datenbanken*. Derzeit vertiefe ich diese Kenntnisse durch einen Master in *Data Science & KI*. Ich entwickle Projekte mit *Python*, *SQL*, *Machine Learning* und *Power BI*. Es begeistert mich, Muster in Daten zu entdecken und komplexe Probleme zu lösen.",
-      "paragraph3": "Meine solide Grundlage in *Programmierung und Finanzanalyse*, kombiniert mit praktischer Softwareentwicklungserfahrung, ermöglicht es mir, eine ganzheitliche Perspektive einzubringen, die *technische Fähigkeiten* und *Geschäftssinn* vereint, um als *Data Scientist und Data Analyst* zu wachsen."
+      "paragraph1": "Nach mehreren Jahren als Koch in Deutschland und Spanien wechselte ich in die *Tech-Welt*. Die Küche brachte mir *Disziplin*, *Detailgenauigkeit*, *Teamarbeit* und die Fähigkeit, *unter Druck* Leistung zu bringen, bei.",
+      "paragraph2": "Ich habe eine Ausbildung in *Betriebswirtschaft & Finanzen* sowie in *Multiplattform-Anwendungsentwicklung*. Diese Kombination vereint *analytisches Denken*, *Geschäftsperspektive* und eine solide Grundlage in *Programmierung* und *Daten*.",
+      "paragraph3": "Ich suche aktiv eine Möglichkeit, *vom ersten Tag an Mehrwert zu liefern*, weiterzulernen und mich in einem anspruchsvollen Umfeld zu entwickeln. Mich motivieren *Herausforderungen*, *kontinuierliche Verbesserung* und Produkte mit *echtem Einfluss*."
     },
     "skillsCategories": {
       "personal": "Persönliche Fähigkeiten",
