--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,9 +12,9 @@
   },
   "home": {
     "description": {
-      "paragraph1": "After several years as a professional chef in Germany and Spain, I decided to redirect my career towards *programming and data analysis*. My culinary experience taught me to work under pressure, maintain *organization and precision in demanding environments*, and *collaborate effectively in teams*.",
-      "paragraph2": "With education in *Business Administration & Finance* and *Multiplatform Application Development*, I combine knowledge in *financial analysis* with experience in *Java*, *C#*, and *databases*. I am currently deepening this knowledge by pursuing a master's degree in *Data Science & AI*. I develop projects with *Python*, *SQL*, *Machine Learning* and *Power BI*. I am passionate about discovering patterns in data and solving complex problems.",
-      "paragraph3": "My solid foundation in *programming and financial analysis*, combined with practical software development experience, allows me to contribute an integral perspective that combines *technical skills* and *business insight* to grow as a *Data Scientist and Data Analyst*."
+      "paragraph1": "After several years as a chef in Germany and Spain, I transitioned into *tech*. The kitchen gave me *discipline*, *attention to detail*, *teamwork*, and the ability to perform *under pressure*.",
+      "paragraph2": "I hold studies in *Business Administration & Finance* and *Multiplatform Application Development*. This mix lets me combine *analytical thinking*, *business perspective*, and a strong foundation in *programming* and *data*.",
+      "paragraph3": "I'm actively looking for an opportunity to *add value from day one*, keep learning, and grow in a demanding environment. I'm driven by *challenges*, *continuous improvement*, and building products with *real impact*."
     },
     "skillsCategories": {
       "personal": "Personal Skills",
