--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -12,9 +12,9 @@
   },
   "home": {
     "description": {
-      "paragraph1": "Después de varios años como cocinero profesional en Alemania y España, he decidido reorientar mi carrera hacia la *programación y el análisis de datos*. Mi experiencia en cocina me ha enseñado a trabajar bajo presión, mantener la *organización y precisión en entornos exigentes*, y *colaborar efectivamente en equipo*.",
-      "paragraph2": "Con formación en *Administración y Finanzas* y *Desarrollo de Aplicaciones Multiplataforma (DAM)*, combino conocimientos en *análisis financiero* con experiencia en *Java*, *C#* y *bases de datos*. Actualmente profundizo estos conocimientos cursando un máster en *Data Science & IA*. Desarrollo proyectos con *Python*, *SQL*, *Machine Learning* y *Power BI*. Me apasiona descubrir patrones en los datos y resolver problemas complejos.",
-      "paragraph3": "Mi sólida base en *programación y análisis financiero*, combinada con experiencia práctica en desarrollo de software, me permite aportar una perspectiva integral que combina *competencias técnicas* y *visión de negocio* para crecer como *Data Scientist y Data Analyst*."
+      "paragraph1": "Tras varios años como cocinero en Alemania y España, di el salto a la *tecnología*. La cocina me aportó *disciplina*, *atención al detalle*, *trabajo en equipo* y capacidad para rendir *bajo presión*.",
+      "paragraph2": "Cuento con estudios en *Administración y Finanzas* y en *Desarrollo de Aplicaciones Multiplataforma*. Esta combinación me permite unir *mentalidad analítica*, *visión de negocio* y una base sólida en *programación* y *datos*.",
+      "paragraph3": "Busco una oportunidad para *aportar valor desde el primer día*, seguir aprendiendo y crecer en un entorno exigente. Me motivan los *retos*, la *mejora continua* y trabajar en productos con *impacto real*."
     },
     "skillsCategories": {
       "personal": "Aptitudes Personales",
